Run quote extraction on Fakespeak

--- a/corenlp_server.props
+++ b/corenlp_server.props
@@ -1,4 +1,6 @@
-annotators = tokenize,ssplit,quote,ner,parse
+annotators = quote
 
-outputFormat = serialized
+outputFormat = json
+
+quote.attributeQuotes: false
 
